# HLAVO

./: .gitignore  .secrets_env  AGENTS.md  PLAN.md  README.md  STATUS.md  charon_run_kalman.sh  doc_build.sh  plan.md  pyproject.toml  python_coding.md  requirements.txt
.dvc/: config
dashboard/: README.md  schemas  setup_env.sh
data_processing/: dataflow_grab.py  process_data.py  process_data_lab.py  requirements.txt
deep_model/: README.md  env.sh
dev/: AGENTS.md  README.md  _AGENTS.md  cndenv.sh  codex_dockerfile  conda-requirements.yml  conda_env_test.py  docker-compose.yml  hlavo  hlavo-build  hlavo-entrypoint  hlavo_activate_and_run.sh  hlavo_common.sh  hlavo_dockerfile  parflow-ldd.sh  parflow_install.sh  parflow_test.py  test_env.py
doc/: calibration.md  conf.py  dashboard.md  datasets.md  design.md  dvc_usage.md  et_model.md  html_doc.sh  index.md  ingress-server-deployment.md  introduction.md  latex_doc.sh  models.md  project_overview.md  requirements.txt
hlavo/: README.md  __init__.py  main.py  pbs_run.sh
microchip_SW/: README.md  platformio.ini
runs/: README.md  run.sh  run_0.sh  run_c.sh
soil_model/: README.md  auxiliary_functions.py  evapotranspiration_fce.py  kalman.py  kalman_postprocess.py  kalman_result.py  kalman_state.py  parallel_ukf.py  parflow_model.py  run_parflow_model.py
tests/: README.md  conftest.py  fixtures.py  run  test_plots.py  toy_richards.yaml
weather_scraper/: test_zarr_storage.py
zarr_fuse/: README.md  TODO  __init__.py  requirements.txt  test_zarr_dask.py  test_zarr_storage.py  test_zarr_structure.py  (+4 more)
(+635 files in other folders)
